@@ -25,12 +25,12 @@ import org.openremote.controller.Constants;
 import org.openremote.controller.ControllerConfiguration;
 import org.openremote.controller.DenonAVRSerialConfiguration;
 import org.openremote.controller.EnOceanConfiguration;
-import org.openremote.controller.ZWaveConfiguration;
-import org.openremote.controller.RoundRobinConfiguration;
 import org.openremote.controller.LutronHomeWorksConfig;
 import org.openremote.controller.MarantzAVRConfig;
 import org.openremote.controller.OpenRemoteRuntime;
 import org.openremote.controller.RoundRobinConfiguration;
+import org.openremote.controller.VelbusConfiguration;
+import org.openremote.controller.ZWaveConfiguration;
 import org.openremote.controller.net.IPAutoDiscoveryServer;
 import org.openremote.controller.net.RoundRobinTCPServer;
 import org.openremote.controller.net.RoundRobinUDPServer;
@@ -97,6 +97,7 @@ public abstract class ServiceContext
     ROUND_ROBIN_CONFIGURATION("roundRobinConfig"),            // TODO : To be removed, see ORCJAVA-183
     LUTRON_HOMEWORKS_CONFIGURATION("lutronHomeWorksConfig"),  // TODO : To be removed, see ORCJAVA-183
     ZWAVE_CONFIGURATION("zwaveConfig"),                       // TODO : To be removed, see ORCJAVA-183
+    VELBUS_CONFIGURATION("velbusConfig"),                     // TODO : To be removed, see ORCJAVA-183
     MARANTZ_AVR_CONFIGURATION("marantzAVRConfig"),            // TODO : To be removed, see ORCJAVA-183
     AMX_NI_CONFIGURATION("AMXNIConfig"),                      // TODO : To be removed, see ORCJAVA-183
     DEVICE_STATE_CACHE("statusCache"),                        // TODO : Deprecated, see ORCJAVA-197
@@ -206,6 +207,22 @@ public abstract class ServiceContext
       );
     }
   }
+  
+  public static VelbusConfiguration getVelbusConfiguration()
+  {
+    try
+    {
+      return (VelbusConfiguration)getInstance().getService(ServiceName.VELBUS_CONFIGURATION);
+    }
+
+    catch (ClassCastException e)
+    {
+      throw new Error(
+          "Velbus Configuration service has had an incompatible change.", e
+      );
+    }
+  }
+
 
   /**
    * TODO :
